--- a/moneytrail/templates/base.html
+++ b/moneytrail/templates/base.html
@@ -25,10 +25,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
       <div class="navbar-nav">
+        {% if user.is_authenticated %}
         <a class="nav-item nav-link" id="home" href="/">Home</a>
-        <a class="nav-item nav-link" id="login" href="/LogIn">LogIn</a>
-        <a class="nav-item nav-link" href="/SignUp">SignUp</a>
         <a class="nav-item nav-link" href="/LogOut">LogOut</a>
+        {% else %}
+        <a class="nav-item nav-link" href="/SignUp">SignUp</a>
+        <a class="nav-item nav-link" href="/LogIn">LogIn</a>
+        {% endif %}
       </div>
     </div>
   </nav>
